--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 			<footer id="footer"></footer>
 		</section>
 		<script type="text/template" id="image-gallery-template">
+			<figure>
+				<img src="<%= image_url %>">
+				<figcaption>
+					<div class="stats">Likes: <%= likes_count %></div>
+					<div class="stats">Comments: <%= comments_count %></div>
+				</figcaption>
+			</figure>
 		</script>
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/underscore/underscore.js"></script>
@@ -23,6 +30,7 @@
 		<script src="js/models/galleryImage.js"></script>
 		<script src="js/collections/galleryImages.js"></script>
 		<script src="js/views/app.js"></script>
+		<script src="js/views/galleryImage.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
