--- a/specRunner.html
+++ b/specRunner.html
@@ -7,12 +7,23 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<section id="">
+			<header id="header">
+			</header>
+			<section id="main">
+				<ul id="image-gallery-list"></ul>
+			</section>
+			<footer id="footer"></footer>
+		</section>
+		<script type="text/template" id="image-gallery-template">
+		</script>
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/underscore/underscore.js"></script>
 		<script src="components/backbone/backbone.js"></script>
 		<script src="js/models/galleryImage.js"></script>
 		<script src="js/collections/galleryImages.js"></script>
 		<script src="js/views/app.js"></script>
+		<script src="js/views/galleryImage.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/spec/app.js"></script>
 	</body>
