added spec test for the main div

--- a/specRunner.html
+++ b/specRunner.html
@@ -16,6 +16,13 @@
 			<footer id="footer"></footer>
 		</section>
 		<script type="text/template" id="image-gallery-template">
+			<figure>
+				<img src="<%= image_url %>">
+				<figcaption>
+					<div class="stats">Likes: <%= likes_count %></div>
+					<div class="stats">Comments: <%= comments_count %></div>
+				</figcaption>
+			</figure>
 		</script>
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/underscore/underscore.js"></script>
