--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<script src="js/views/app.js"></script>
 		<script src="js/views/galleryImage.js"></script>
 		<script src="js/views/menu.js"></script>
+		<script src="js/views/loadMoreView.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
