--- a/specRunner.html
+++ b/specRunner.html
@@ -7,8 +7,10 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section id="">
+		<section id="dribbbleapp">
 			<header id="header">
+				<section id="menu">
+				</section>
 			</header>
 			<section id="main">
 				<ul id="image-gallery-list"></ul>
@@ -16,13 +18,15 @@
 			<footer id="footer"></footer>
 		</section>
 		<script type="text/template" id="image-gallery-template">
-			<figure>
-				<img src="<%= image_url %>">
-				<figcaption>
-					<div class="stats">Likes: <%= likes_count %></div>
-					<div class="stats">Comments: <%= comments_count %></div>
-				</figcaption>
-			</figure>
+			<figcaption>
+			</figcaption>
+		</script>
+		<script type="text/template" id="menu-template">
+			<ul class="menu">
+				<li><a data="popular" class="list <% if(listType === 'popular') {%>selected<%}%>" href="#/Popular">Popular</a></li>
+				<li><a data="debuts" class="list <% if(listType === 'debuts') {%>selected<%}%>" href="#/debuts">Debuts</a></li>
+				<li><a data="everyone" class="list <% if(listType === 'everyone') {%>selected<%}%>" href="#/everyone">Everyone</a></li>
+			</ul>
 		</script>
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/underscore/underscore.js"></script>
@@ -31,6 +35,8 @@
 		<script src="js/collections/galleryImages.js"></script>
 		<script src="js/views/app.js"></script>
 		<script src="js/views/galleryImage.js"></script>
+		<script src="js/views/menu.js"></script>
+		<script src="js/views/loadMoreView.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/spec/app.js"></script>
 	</body>
